# Program2semestr3

./: CMakeLists.txt
MainApp/: CMakeLists.txt  main.cpp
StackLibrary/: CMakeLists.txt  Element.cpp  Element.h  Stack.cpp  Stack.h
Test/: CMakeLists.txt  Stack<Int>Test.cpp  Stack<char>Test.cpp  StackTestWithFixture.cpp  main.cpp
